--- a/styles/style.css
+++ b/styles/style.css
@@ -160,9 +160,45 @@ i {
     top: 467px;
 }
 
+.label-winning-score {
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 10px;
+    width: 200px;
+    text-transform: uppercase;
+    position: absolute;
+    left: 40%;
+    transform: translateX(-50%);
+    top: 530px;
+}
+
+.final-score {
+    position: absolute;
+    left: 60%;
+    transform: translateX(-50%);
+    top: 530px;
+    color: #555;
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 10px;
+    width: 160px;
+    text-transform: uppercase;
+}
+
 .dice {
     position: absolute;
-    left: 50%;
+    left: 58%;
+    top: 178px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+
+.second-dice {
+    position: absolute;
+    left: 42%;
     top: 178px;
     transform: translateX(-50%);
     height: 100px;
